--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
+    "nanoid": "^4.0.0",
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-svg": "^13.3.0"
